editing templates is done

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,16 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}Заголовок{% endblock %}</title>
-    {% load static %}
     {% block stylesheet %}{% endblock %}
 </head>
-<body>
-    {% include 'includes/nav.html' %}
-    <main>
-        <div class="container">
-            {% block content %}{% endblock content %}
-        </div>
-    </main>
+<body class="body">
+    {% include 'includes/header.html' %}
+    {% block main %}{% endblock main %}
     {% include 'includes/footer.html' %}
 </body>
 </html>
