--- a/templates/authForm.html
+++ b/templates/authForm.html
@@ -1,28 +1,10 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Войти на сайт</title>
-    <link rel="stylesheet" href="./pages/form.css">
-</head>
-<body class="body">
-<header class="header">
-    <nav class="nav">
-        <div class="nav__container container">
-            <ul class="nav__items list">
-                <li class="nav__item nav__item_disabled"><a href="#" class="nav__link link">Рецепты</a></li>
-                <li class="nav__item nav__item_disabled"><a href="#" class="nav__link link">Список покупок</a></li>
-            </ul>
-            <ul class="nav__items list">
-                <li class="nav__item"><a href="#" class="nav__link link">Войти</a></li>
-                <li class="nav__item"><a href="#" class="button button_style_blue">Создать аккаунт</a></li>
-            </ul>
-        </div>
-    </nav>
-</header>
+{% extends "base.html" %}
+{% load static %}
+{% block title %}Войти на сайт{% endblock %}
+{% block stylesheet %}
+<link rel="stylesheet"
+      href="{% static 'shoplist/pages/form.css' %}">{% endblock %}
+{% block main %}
 <main class="main container">
     <div class="main__header">
         <h1 class="main__title">Войти на сайт</h1>
@@ -32,14 +14,16 @@
             <div class="form__group">
                 <label for="id_username" class="form__label">Имя</label>
                 <div class="form__field-group">
-                    <input type="text" name="username" id="id_username" class="form__input">
+                    <input type="text" name="username" id="id_username"
+                           class="form__input">
                     <span class="form__error"></span>
                 </div>
             </div>
             <div class="form__group">
                 <label for="id_password" class="form__label">Пароль</label>
                 <div class="form__field-group">
-                    <input type="password" name="password" id="id_password" class="form__input">
+                    <input type="password" name="password" id="id_password"
+                           class="form__input">
                     <span class="form__error">Имя пользователя и пароль не совпадают. Введите правильные данные.</span>
                 </div>
             </div>
@@ -49,17 +33,6 @@
             </div>
         </form>
     </div>
-
-
 </main>
-<footer class="footer">
-    <div class="footer__container container">
-        <a href="#" class="footer__brand link">Продуктовый помощник</a>
-        <ul class="footer__items">
-            <li class="footer__item"><a href="#" class="footer__link link">Об авторе </a></li>
-            <li class="footer__item"><a href="#" class="footer__link link">Технологии</a></li>
-        </ul>
-    </div>
-</footer>
-</body>
-</html>
+{% endblock %}
+
