--- a/templates/old_templates/changePasswordOld.html
+++ b/templates/old_templates/changePasswordOld.html
@@ -1,14 +1,38 @@
-{% extends "base.html" %}
-{% load static %}
-{% block title %}Изменить пароль{% endblock %}
-{% block stylesheet %}
-<link rel="stylesheet" href="{% static 'shoplist/pages/form.css' %}">{% endblock %}
-{% block main %}
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Изменить пароль</title>
+    <link rel="stylesheet" href="./pages/form.css">
+</head>
+<body class="body">
+
+  <header class="header">
+      <nav class="nav">
+          <div class="nav__container container">
+              <ul class="nav__items list">
+                  <li class="nav__item nav__item_active"><a href="#" class="nav__link link">Рецепты</a></li>
+                  <li class="nav__item"><a href="#" class="nav__link link">Мои подписки</a></li>
+                  <li class="nav__item"><a href="#" class="nav__link link">Создать рецепт</a></li>
+                  <li class="nav__item"><a href="#" class="nav__link link">Избранное</a></li>
+                  <li class="nav__item"><a href="#" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">4</span></li>
+
+              </ul>
+              <ul class="nav__items list">
+                  <li class="nav__item"><a href="#" class="nav__link link">Изменить пароль</a></li>
+                  <li class="nav__item"><a href="#" class="nav__link link">Выход</a></li>
+              </ul>
+          </div>
+      </nav>
+  </header>
 <main class="main container">
     <div class="main__header">
         <h1 class="main__title">Изменить пароль</h1>
     </div>
-        <div class="form-container">
+    <div class="form-container">
         <form class="form">
             <div class="form__group">
                 <label for="id_oldPassword" class="form__label">Старый пароль</label>
@@ -40,6 +64,17 @@
                 </div>
         </form>
     </div>
-</main>
-{% endblock %}
 
+
+</main>
+<footer class="footer">
+    <div class="footer__container container">
+        <a href="#" class="footer__brand link">Продуктовый помощник</a>
+        <ul class="footer__items">
+            <li class="footer__item"><a href="#" class="footer__link link">Об авторе </a></li>
+            <li class="footer__item"><a href="#" class="footer__link link">Технологии</a></li>
+        </ul>
+    </div>
+</footer>
+</body>
+</html>
