--- a/templates/resetPassword.html
+++ b/templates/resetPassword.html
@@ -1,28 +1,9 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Сброс пароля</title>
-    <link rel="stylesheet" href="./pages/form.css">
-</head>
-<body class="body">
-<header class="header">
-    <nav class="nav">
-        <div class="nav__container container">
-            <ul class="nav__items list">
-                <li class="nav__item nav__item_disabled"><a href="#" class="nav__link link">Рецепты</a></li>
-                <li class="nav__item nav__item_disabled"><a href="#" class="nav__link link">Список покупок</a></li>
-            </ul>
-            <ul class="nav__items list">
-                <li class="nav__item"><a href="#" class="nav__link link">Войти</a></li>
-                <li class="nav__item"><a href="#" class="button button_style_blue">Создать аккаунт</a></li>
-            </ul>
-        </div>
-    </nav>
-</header>
+{% extends "base.html" %}
+{% load static %}
+{% block title %}Сброс пароля{% endblock %}
+{% block stylesheet %}
+<link rel="stylesheet" href="{% static 'shoplist/pages/form.css' %}">{% endblock %}
+{% block main %}
 <main class="main container">
     <div class="main__header">
         <h1 class="main__title">Сброс пароля</h1>
@@ -44,17 +25,5 @@
            </div>
         </form>
     </div>
-
-
 </main>
-<footer class="footer">
-    <div class="footer__container container">
-        <a href="#" class="footer__brand link">Продуктовый помощник</a>
-        <ul class="footer__items">
-            <li class="footer__item"><a href="#" class="footer__link link">Об авторе </a></li>
-            <li class="footer__item"><a href="#" class="footer__link link">Технологии</a></li>
-        </ul>
-    </div>
-</footer>
-</body>
-</html>
+{% endblock %}
