--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -2,20 +2,22 @@
     <nav class="nav">
         <div class="nav__container container">
             <ul class="nav__items list">
-                <li class="nav__item nav__item_active"><a href="#" class="nav__link link">Рецепты</a></li>
+                <li class="nav__item nav__item_active"><a href="{% url 'index' %}" class="nav__link link">Рецепты</a></li>
                 {% if user.is_authenticated %}
-                <li class="nav__item"><a href="#" class="nav__link link">Мои подписки</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Создать рецепт</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Избранное</a></li>
+                <li class="nav__item"><a href="{% url 'myfollow' %}" class="nav__link link">Мои подписки</a></li>
+                <li class="nav__item"><a href="{% url 'formrecipe' %}" class="nav__link link">Создать рецепт</a></li>
+                <li class="nav__item"><a href="{% url 'favorite' %}" class="nav__link link">Избранное</a></li>
                 {% endif %}
-                <li class="nav__item nav__item_disabled"><a href="#" class="nav__link link">Список покупок <span class="badge badge_style_blue nav__badge" id="counter">4</span></a></li>
+                <li class="nav__item nav__item_disabled"><a href="{% url 'shoplist' %}" class="nav__link link">Список покупок <span class="badge badge_style_blue nav__badge" id="counter">4</span></a></li>
             </ul>
             <ul class="nav__items list">
-                <li class="nav__item"><a href="#" class="nav__link link">Войти</a></li>
-                <li class="nav__item"><a href="#" class="button button_style_blue">Создать аккаунт</a></li>
+
                 {% if user.is_authenticated %}
-                <li class="nav__item"><a href="#" class="nav__link link">Изменить пароль</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Выход</a></li>
+                <li class="nav__item"><a href="{% url 'changepassword' %}" class="nav__link link">Изменить пароль</a></li>
+                <li class="nav__item"><a href="{% url 'logout' %}" class="nav__link link">Выход</a></li>
+                {% else %}
+                <li class="nav__item"><a href="{% url 'login' %}" class="nav__link link">Войти</a></li>
+                <li class="nav__item"><a href="{% url 'signup' %}" class="button button_style_blue">Создать аккаунт</a></li>
                 {% endif %}
             </ul>
         </div>
