--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -11,16 +11,16 @@
         <div class="form-container">
         <form class="form">
             <div class="form__group">
-                <label for="id_oldPassword" class="form__label">Старый пароль</label>
+                <label for="{{ form.old_password.id_for_label }}" class="form__label">Старый пароль</label>
                 <div class="form__field-group">
-                    <input type="text" name="old_password" id="id_oldPassword" class="form__input">
+                    <input type="text" name="{{ form.old_password.name }}" id="{{ form.old_password.id_for_label }}" class="form__input">
                     <span class="form__error"></span>
                 </div>
             </div>
             <div class="form__group">
-                <label for="id_newPassword" class="form__label">Новый пароль</label>
+                <label for="{{ form.new_password.id_for_label }}" class="form__label">Новый пароль</label>
                 <div class="form__field-group">
-                    <input type="password" name="new_password" id="id_newPassword" class="form__input">
+                    <input type="password" name="{{ form.new_password.name }}" id="{{ form.new_password.id_for_label }}" class="form__input">
                     <span class="form__input-info">Ваш пароль не должен совпадать с вашим именем или другой персональной информацией или быть слишком похожим на неё.</span>
                     <span class="form__input-info">Ваш пароль должен содержать как минимум 8 символов.</span>
                     <span class="form__input-info">Ваш пароль не может быть одним из широко распространённых паролей.</span>
@@ -29,9 +29,9 @@
                 </div>
             </div>
             <div class="form__group">
-                <label for="id_confirmPassword" class="form__label">Подтверждение нового пароля</label>
+                <label for="{{ form.confirm_password.id_for_label }}" class="form__label">Подтверждение нового пароля</label>
                 <div class="form__field-group">
-                    <input type="password" name="confirm_password" id="id_confirmPassword" class="form__input">
+                    <input type="password" name="{{ form.confirm_password.name }}" id="{{ form.confirm_password.id_for_label }}" class="form__input">
                     <span class="form__error"></span>
                 </div>
             </div>
