--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -9,14 +9,15 @@
         <h1 class="main__title">Сброс пароля</h1>
     </div>
     <div class="form-container">
-        <form class="form">
+        <form method="post" class="form">
+        {% csrf_token %}
             <p class="form__info-text">
                 Чтобы сбросить старый пароль — введите адрес электронной почты, под которым вы регистрировались.
             </p>
             <div class="form__group">
-                <label for="id_email" class="form__label">Адрес электронной почты</label>
+                <label for="{{ form.email.id_for_label }}" class="form__label">Адрес электронной почты</label>
                 <div class="form__field-group">
-                    <input type="email" name="email" id="id_email" class="form__input">
+                    <input type="email" name="{{ form.email.name }}" id="{{ form.email.id_for_label }}" class="form__input">
                     <span class="form__error"></span>
                 </div>
             </div>
