add Favorites serializer

--- a/templates/formRecipe.html
+++ b/templates/formRecipe.html
@@ -43,6 +43,7 @@
             <div class="form__group">
                 <label for="nameIngredient" class="form__label">Ингредиенты</label>
                 <div class="form__field-group">
+                    {{ form.ingredients }}
                     <div class="form__field-group-ingredientes">
                         <div class="form__dropdown">
                             <input type="text" id="nameIngredient" class="form__input">
