--- a/templates/base.html
+++ b/templates/base.html
@@ -12,5 +12,6 @@
     {% include 'includes/header.html' %}
     {% block main %}{% endblock main %}
     {% include 'includes/footer.html' %}
+    {% block javascript %}{% endblock %}
 </body>
 </html>
