--- a/templates/singlePage.html
+++ b/templates/singlePage.html
@@ -5,12 +5,13 @@
 <link rel="stylesheet" href="{% static 'shoplist/pages/single.css' %}">{% endblock %}
 {% block main %}
 <main class="main container">
-    <div class="single-card" data-id="{{ object.id }}">
+    <div class="single-card" data-id="{{ object.id }}" data-author="{{ object.author }}">
         <img src="/media/{{ recipe.image }}" alt="{{ object.title }}" class="single-card__image">
         <div class="single-card__info">
             <div class="single-card__header-info">
                 <h1 class="single-card__title">{{ object.title }}</h1>
                 {% if user.is_authenticated %}
+                    {% csrf_token %}
                     <div class="single-card__favorite">
                         <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite icon-favorite_big "></span></button>
                         <div class="single-card__favorite-tooltip tooltip">Добавить в избранное</div>
@@ -67,11 +68,18 @@
     </div>
 </main>
 {% endblock %}
+{% block javascript %}
+<script src="{% static 'shoplist/js/components/Favorites.js' %}"></script>
+<script src="{% static 'shoplist/js/components/Subscribe.js' %}"></script>
 <script src="{% static 'shoplist/js/components/MainCards.js' %}"></script>
 <script src="{% static 'shoplist/js/components/Purchases.js' %}"></script>
 <script src="{% static 'shoplist/js/components/Header.js' %}"></script>
 <script src="{% static 'shoplist/js/config/config.js' %}"></script>
 <script src="{% static 'shoplist/js/api/Api.js' %}"></script>
 <script src="{% static 'shoplist/js/components/SingleCard.js' %}"></script>
-<!--<script src="{% static 'shoplist/singlePageNotAuth.js' %}"></script>-->
 <script src="{% static 'shoplist/singlePage.js' %}"></script>
+{% endblock %}
+
+
+
+
