--- a/templates/authorRecipe.html
+++ b/templates/authorRecipe.html
@@ -13,6 +13,7 @@
     {% include "includes/paginator.html" %}
 </main>
 {% endblock %}
+{% block javascript %}
 <script src="{% static 'shoplist/js/components/MainCards.js' %}"></script>
 <script src="{% static 'shoplist/js/components/Purchases.js' %}"></script>
 <script src="{% static 'shoplist/js/components/Header.js' %}"></script>
@@ -22,3 +23,4 @@
 <script src="{% static 'shoplist/js/components/Subscribe.js' %}"></script>
 <script src="{% static 'shoplist/js/components/AuthorRecipe.js' %}"></script>
 <script src="{% static 'shoplist/authorRecipe.js' %}"></script>
+{% endblock %}
