--- a/templates/shopList.html
+++ b/templates/shopList.html
@@ -39,8 +39,10 @@
     </div>
 </main>
 {% endblock %}
+{% block javascript %}
 <script src="{% static 'shoplist/js/components/Header.js' %}"></script>
 <script src="{% static 'shoplist/js/config/config.js' %}"></script>
 <script src="{% static 'shoplist/js/api/Api.js' %}"></script>
 <script src="{% static 'shoplist/js/components/ShopList.js' %}"></script>
 <script src="{% static 'shoplist/shopList.js' %}"></script>
+{% endblock %}
