--- a/templates/myFollow.html
+++ b/templates/myFollow.html
@@ -8,60 +8,24 @@
     <div class="main__header">
         <h1 class="main__title">Мои подписки</h1>
     </div>
-{% for user in page %}
-<div class="card-list">
-        <div class="card-user" data-author="{{ user.id }}">
-        <div class="card-user__header">
-            <h2 class="card-user__title">{{ user.name }}</h2>
-        </div>
-        <div class="card-user__body">
-            <ul class="card-user__items">
-                {% for recipe in user.recipes.all %}
-                <li class="card-user__item">
-                    <div class="recipe">
-                        <img src="/media/{{ recipe.image }}" alt="{{ recipe.title }}" class="recipe__image">
-                        <h3 class="recipe__title">{{ recipe.title }}</h3>
-                        <p class="recipe__text"><span class="icon-time"></span> {{ recipe.time }} мин.</p>
-                    </div>
-                </li>
-                {% endfor %}
-                <li class="card-user__item">
-                    <a href="#" class="card-user__link link">Еще 7 рецептов...</a>
-                </li>
-            </ul>
-        </div>
-        <div class="card-user__footer">
-            <button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться</button>
-        </div>
-    </div>
 
-        <div class="card-user" data-author="707">
+<div class="card-list">
+    {% for user in page %}
+        <div class="card-user" data-author="{{ user.id }}">
             <div class="card-user__header">
-                <h2 class="card-user__title">Вероника Чернова</h2>
+                <h2 class="card-user__title">{{ user }}</h2>
             </div>
             <div class="card-user__body">
                 <ul class="card-user__items">
+                    {% for recipe in user.recipes.all %}
                     <li class="card-user__item">
                         <div class="recipe">
-                            <img src="{% static 'shoplist/images/testCardImg.png' %}" alt="какой-то-текст" class="recipe__image">
-                            <h3 class="recipe__title">Французские тосты</h3>
-                            <p class="recipe__text"><span class="icon-time"></span> 20 мин.</p>
+                            <img src="/media/{{ recipe.image }}" alt="{{ recipe.title }}" class="recipe__image">
+                            <h3 class="recipe__title">{{ recipe.title }}</h3>
+                            <p class="recipe__text"><span class="icon-time"></span> {{ recipe.time }} мин.</p>
                         </div>
                     </li>
-                    <li class="card-user__item">
-                        <div class="recipe">
-                            <img src="{% static 'shoplist/images/testCardImg.png' %}" alt="какой-то-текст" class="recipe__image">
-                            <h3 class="recipe__title">Французские тосты</h3>
-                            <p class="recipe__text"><span class="icon-time"></span> 20 мин.</p>
-                        </div>
-                    </li>
-                    <li class="card-user__item">
-                        <div class="recipe">
-                            <img src="{% static 'shoplist/images/testCardImg.png' %}" alt="какой-то-текст" class="recipe__image">
-                            <h3 class="recipe__title">Французские тосты</h3>
-                            <p class="recipe__text"><span class="icon-time"></span> 20 мин.</p>
-                        </div>
-                    </li>
+                    {% endfor %}
                     <li class="card-user__item">
                         <a href="#" class="card-user__link link">Еще 7 рецептов...</a>
                     </li>
@@ -71,44 +35,9 @@
                 <button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться</button>
             </div>
         </div>
-        <div class="card-user" data-author="7091">
-            <div class="card-user__header">
-                <h2 class="card-user__title">Вероника Чернова</h2>
-            </div>
-            <div class="card-user__body">
-                <ul class="card-user__items">
-                    <li class="card-user__item">
-                        <div class="recipe">
-                            <img src="{% static 'shoplist/images/testCardImg.png' %}" alt="какой-то-текст" class="recipe__image">
-                            <h3 class="recipe__title">Французские тосты</h3>
-                            <p class="recipe__text"><span class="icon-time"></span> 20 мин.</p>
-                        </div>
-                    </li>
-                    <li class="card-user__item">
-                        <div class="recipe">
-                            <img src="{% static 'shoplist/images/testCardImg.png' %}" alt="какой-то-текст" class="recipe__image">
-                            <h3 class="recipe__title">Французские тосты</h3>
-                            <p class="recipe__text"><span class="icon-time"></span> 20 мин.</p>
-                        </div>
-                    </li>
-                    <li class="card-user__item">
-                        <div class="recipe">
-                            <img src="{% static 'shoplist/images/testCardImg.png' %}" alt="какой-то-текст" class="recipe__image">
-                            <h3 class="recipe__title">Французские тосты</h3>
-                            <p class="recipe__text"><span class="icon-time"></span> 20 мин.</p>
-                        </div>
-                    </li>
-                    <li class="card-user__item">
-                        <a href="#" class="card-user__link link">Еще 7 рецептов...</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="card-user__footer">
-                <button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться</button>
-            </div>
-        </div>
-    </div>
-{% endfor %}
+    {% endfor %}
+</div>
+
 {% include "includes/paginator.html" %}
 </main>
 {% endblock %}
