--- a/templates/singlePage.html
+++ b/templates/singlePage.html
@@ -12,8 +12,13 @@
                 <h1 class="single-card__title">{{ object.title }}</h1>
                 {% if user.is_authenticated %}
                     <div class="single-card__favorite">
+                        {% if favorite %}
+                        <button class="button button_style_none" name="favorites"><span class="icon-favorite icon-favorite_big icon-favorite_active"></span></button>
+                        <div class="single-card__favorite-tooltip tooltip">Убрать из избранного</div>
+                        {% else %}
                         <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite icon-favorite_big "></span></button>
                         <div class="single-card__favorite-tooltip tooltip">Добавить в избранное</div>
+                        {% endif %}
                     </div>
                 {% endif %}
             </div>
