--- a/templates/includes/card_list.html
+++ b/templates/includes/card_list.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="card-list">
-    {% for recipe in object_list %}
+    {% for recipe in page_obj %}
     <div class="card" data-id="{{ recipe.id }}">
         <a href="{{ recipe.get_absolute_url }}" class="link" target="_blank"><img src="/media/{{ recipe.image }}" alt="{{ recipe.title }}" class="card__image"></a>
         <div class="card__body">
