--- a/templates/indexNotAuth.html
+++ b/templates/indexNotAuth.html
@@ -6,7 +6,9 @@
     <main class="main container">
         {% include "includes/main_header.html" %}
         {% include "includes/card_list.html" %}
-        {% include "includes/paginator.html" %}
+        {% if page_obj.has_other_pages %}
+            {% include "includes/paginator.html" %}
+        {% endif %}
     </main>
 {% endblock %}
 {% block javascript %}
