--- a/templates/includes/paginator.html
+++ b/templates/includes/paginator.html
@@ -1,9 +1,8 @@
 <nav class="pagination" aria-label="Search results pages">
     <ul class="pagination__container">
         {% if page_obj.has_previous %}
-            <li class="pagination__item"><a class="pagination__link link" href="?page={{ page_obj.previous_page_number }}"><span class="icon-left"></span></a></li>
+            <li class="pagination__item"><a class="pagination__link link" href="?page={{ page_obj.previous_page_number }}"><<span class="icon-left"></span></a></li>
         {% endif %}
-
         {% for i in paginator.page_range %}
             {% if page_obj.number == i %}
         <li class="pagination__item pagination__item_active"><a class="pagination__link link" href="?page={{ i }}">{{ i }}</a></li>
@@ -13,7 +12,7 @@
         {% endfor %}
 
         {% if page_obj.has_next %}
-            <li class="pagination__item"><a class="pagination__link link" href="?page={{ page_obj.next_page_number }}"><span class="icon-right"></span></a></li>
+            <li class="pagination__item"><a class="pagination__link link" href="?page={{ page_obj.next_page_number }}">><span class="icon-right"></span></a></li>
         {% endif %}
     </ul>
 </nav>
