--- a/templates/formRecipe.html
+++ b/templates/formRecipe.html
@@ -24,17 +24,16 @@
                 <div class="form__field-group">
                     <div class="tags">
                         <div class="tags__item">
-                            {{ form.tag }}
-<!--                            <input type="checkbox" name="{{ form.tag.name }}" id="id_tag_0" class="tags__checkbox tags__checkbox_style_orange">-->
-<!--                            <label for="id_tag_0" class="tags__label">Завтрак</label>-->
-<!--                        </div>-->
-<!--                        <div class="tags__item">-->
-<!--                            <input type="checkbox" name="{{ form.tag.name }}" id="id_tag_1" class="tags__checkbox tags__checkbox_style_green" checked>-->
-<!--                            <label for="id_tag_1" class="tags__label">Обед</label>-->
-<!--                        </div>-->
-<!--                        <div class="tags__item">-->
-<!--                            <input type="checkbox" name="{{ form.tag.name }}" id="id_tag_2" class="tags__checkbox tags__checkbox_style_purple" checked>-->
-<!--                            <label for="id_tag_2" class="tags__label">Ужин</label>-->
+                            <input type="checkbox" name="{{ form.tag.name }}" value="breakfast" id="id_tag_0" class="tags__checkbox tags__checkbox_style_orange">
+                            <label for="id_tag_0" class="tags__label">Завтрак</label>
+                        </div>
+                        <div class="tags__item">
+                            <input type="checkbox" name="{{ form.tag.name }}" value="lunch" id="id_tag_1" class="tags__checkbox tags__checkbox_style_green">
+                            <label for="id_tag_1" class="tags__label">Обед</label>
+                        </div>
+                        <div class="tags__item">
+                            <input type="checkbox" name="{{ form.tag.name }}" value="dinner" id="id_tag_2" class="tags__checkbox tags__checkbox_style_purple">
+                            <label for="id_tag_2" class="tags__label">Ужин</label>
                         </div>
                     </div>
                     <span class="form__error">{{ form.tag.errors }}</span>
