--- a/templates/formRecipe.html
+++ b/templates/formRecipe.html
@@ -52,6 +52,7 @@
                         <label for="cantidad" class="form__label" id="cantidadVal">шт.</label>
                     </div>
                     <div class="form__field-group-ingredientes-container">
+                        список ингредиентов
                     </div>
                     <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
                     <span class="form__error">{{ form.ingredients.errors }}</span>
