--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -7,8 +7,9 @@
                 <li class="nav__item"><a href="{% url 'myfollow' %}" class="nav__link link">Мои подписки</a></li>
                 <li class="nav__item"><a href="{% url 'create-recipe' %}" class="nav__link link">Создать рецепт</a></li>
                 <li class="nav__item"><a href="{% url 'favorite' %}" class="nav__link link">Избранное</a></li>
+
+                <li class="nav__item nav__item_disabled"><a href="{% url 'shoplist' %}" class="nav__link link">Список покупок <span class="badge badge_style_blue nav__badge" id="counter">{{ user.purchases.count }}</span></a></li>
                 {% endif %}
-                <li class="nav__item nav__item_disabled"><a href="{% url 'shoplist' %}" class="nav__link link">Список покупок <span class="badge badge_style_blue nav__badge" id="counter">4</span></a></li>
             </ul>
             <ul class="nav__items list">
 
